src/test/ui/consts/qualif_overwrite.stderr
error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/qualif_overwrite.rs:10:5
   |
LL |     &{a}
   |     ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
